--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 alloc = ["zerocopy/alloc"]
 
 [dependencies]
+derive_more = { version = "2.0.1", features = ["debug"] }
 memmap2 = "0.9.5"
 zerocopy = { version = "0.8.25", features = ["derive"] }
