Add `OwnedIconCache` to safely open icon cache files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-alloc = ["zerocopy/alloc"]
+file = ["file-lock", "memmap2"]
 
 [dependencies]
 derive_more = { version = "2.0.1", features = ["debug"] }
-memmap2 = "0.9.5"
 zerocopy = { version = "0.8.25", features = ["derive"] }
+
+file-lock = { version = "2.1.11", optional = true }
+memmap2 = { version = "0.9.5", optional = true }
